--- a/kcode/css/app.css
+++ b/kcode/css/app.css
@@ -4835,10 +4835,11 @@ img {
       .main-nav__list--main .main-nav__item {
         height: auto;
         padding: 10px 55px 10px 12px;
-        width: 100%; }
+        width: 85%; }
         @media only screen and (min-width: 768px) {
           .main-nav__list--main .main-nav__item {
-            padding: 0; } }
+            padding: 0;
+            width: 100%; } }
       @media only screen and (min-width: 768px) {
         .main-nav__list--main {
           padding: 0 7px 0 0;
@@ -4941,25 +4942,25 @@ img {
         padding: 0 20px; }
     .main-nav--full-height .main-nav__list {
       height: 100%; } }
-  @media only screen and (min-width: 320px) {
-    .main-nav--opened .main-nav__toggle-bar {
-      display: block;
-      background-color: transparent;
-      z-index: 6;
-      color: #1baf5d;
-      position: fixed;
-      top: auto;
-      left: auto;
-      -webkit-transform: translate(0%, 0%);
-              transform: translate(0%, 0%); } }
-  .main-nav--opened .main-nav__toggle-bar::before {
-    top: 0;
-    -webkit-transform: rotate(45deg);
-            transform: rotate(45deg); }
-  .main-nav--opened .main-nav__toggle-bar::after {
-    top: 0;
-    -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg); }
+  .main-nav--opened .main-nav__toggle {
+    position: fixed;
+    top: 12px;
+    right: 10px;
+    z-index: 12; }
+  .main-nav--opened .main-nav__toggle-bar {
+    display: block;
+    background-color: #fff;
+    z-index: 15;
+    color: #1baf5d;
+    position: absolute; }
+    .main-nav--opened .main-nav__toggle-bar::before {
+      top: 0;
+      -webkit-transform: rotate(45deg);
+              transform: rotate(45deg); }
+    .main-nav--opened .main-nav__toggle-bar::after {
+      top: 0;
+      -webkit-transform: rotate(-45deg);
+              transform: rotate(-45deg); }
   .main-nav--opened .main-nav__list--main {
     display: block; }
     @media only screen and (min-width: 768px) {
@@ -4997,12 +4998,6 @@ img {
   padding: 20px;
   background-color: transparent;
   border: 0;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  text-indent: -1000px;
-  overflow: hidden;
   z-index: 10; }
   .main-nav__toggle:hover {
     cursor: pointer; }
