--- a/kcode/css/app.css
+++ b/kcode/css/app.css
@@ -5727,22 +5727,42 @@ img {
   color: currentColor; }
   .product-picture__info {
     position: absolute;
-    bottom: 0;
-    left: 21%;
+    bottom: 9px;
+    left: 92px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    @media only screen and (min-width: 768px) {
+      .product-picture__info {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        bottom: 0;
+        left: 97px; } }
   .product-picture__name {
     display: block;
     margin-right: 7px;
-    font-size: 18px;
-    line-height: 2;
+    font-size: 14px;
+    line-height: 1.25;
     font-weight: 500;
     text-transform: uppercase;
     color: #ffffff; }
+    @media only screen and (min-width: 768px) {
+      .product-picture__name {
+        font-size: 18px;
+        line-height: 2; } }
+    @media only screen and (min-width: 980px) {
+      .product-picture__name {
+        font-size: 18px;
+        line-height: 2; } }
   .product-picture__img {
     position: absolute;
     top: 0;
